# projects_for_training

./: README.md
api_learning/step_1_basic/: main.py  pyproject.toml
api_learning/step_2_pydantic_models/: main.py  pyproject.toml
api_learning/step_3_postgreSQL/: books  books.db  main.py  pyproject.toml
api_learning/step_4_aunthentication_and_authorization/: main.py  pyproject.toml
api_learning/step_5_background_tasks/: main.py  pyproject.toml
api_learning/step_6_files/: main.py  pyproject.toml
game_guess_the_number/: guess_the_number.py
game_rock_paper_scissors/: rock_paper_scissors.py
perplexity_sql_task/: .env  pyproject.toml
perplexity_sql_task/src/: config.py  core.py  database.py  main.py  models.py
simpliest_todo_manager/: main.py  pyproject.toml
sql_train/: .env  pyproject.toml
sql_train/src/: config.py  database.py  main.py  models.py
sql_train/src/queries/: core.py
