[project]
name = "sql-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "psycopg>=3.2.6",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[tool.basedpyright]
include = ["src"]

reportUnusedImport = "none"
reportUninitializedInstanceVariable = "none"
reportUnannotatedClassAttribute = "none"
