[project]
name = "step-3-postgresql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
